# fluxsort-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  flake.nix
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/fluxsort/: blitsort.c  blitsort.h  fluxsort.c  fluxsort.hpp  quadsort.c  quadsort.h
source/: fluxsort.cpp
test/: CMakeLists.txt
test/source/: fluxsort_test.cpp
